# btmw

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml
configs/: simulations.yaml
configs/pipeline/: README.md  hbtplus.conf  soap_hbt.yml  soap_vr.yml  swift_simulation.yml  velociraptor.cfg
data/: README.md
data/cache/cmf/: m12f_btps_deep  m12f_btps_soft  m12f_cdmo  m12i_btps_deep  m12i_btps_soft  m12i_cdmo
data/cache/hmf/: VR-SOAP_HMF_m12i_btps_deep0050  VR-SOAP_HMF_m12i_btps_deep0050.meta.json  VR-SOAP_HMF_m12i_btps_soft0050  VR-SOAP_HMF_m12i_btps_soft0050.meta.json  VR-SOAP_HMF_m12i_cdmo0050  VR-SOAP_HMF_m12i_cdmo0050.meta.json  hbtplus_HMF_m12f_btps_deep0049  hbtplus_HMF_m12f_btps_deep0049.meta.json  hbtplus_HMF_m12f_btps_soft0049  hbtplus_HMF_m12f_btps_soft0049.meta.json  hbtplus_HMF_m12f_cdmo0049  hbtplus_HMF_m12f_cdmo0049.meta.json  hbtplus_HMF_m12i_btps_deep0050  hbtplus_HMF_m12i_btps_deep0050.meta.json  hbtplus_HMF_m12i_btps_deep_highest0050  hbtplus_HMF_m12i_btps_deep_highest0050.meta.json  hbtplus_HMF_m12i_btps_soft0050  hbtplus_HMF_m12i_btps_soft0050.meta.json  hbtplus_HMF_m12i_btps_soft_highest0050  hbtplus_HMF_m12i_btps_soft_highest0050.meta.json  hbtplus_HMF_m12i_cdmo0050  hbtplus_HMF_m12i_cdmo0050.meta.json  (+2 more)
scripts/: figure4_projection_map.sbatch  figure5_radial_density.sbatch  figures_11_to_14_hbt_vs_vr.sbatch  figures_15_to_18_resolution_study.sbatch  figures_6_to_10_hbt_fiducial.sbatch  pack_raw_data.sbatch  upload_zenodo.sbatch
src/btmw/: __init__.py  cli.py  config.py  defaults.py  io_soap.py  paths.py  style.py
tests/: test_cmf.py  test_hmf_hvf.py  test_hmf_vr.py  test_hrf.py  test_hrf_vr.py  test_hvf_vr.py  test_mvsv.py  test_radial_density.py  test_resolution_study.py  test_rvsv.py  test_smoke.py
(+142 files in other folders)
